# stm32-test

./: CMakeLists.txt  README.md  configure-cmake  openocd_l432kc.cfg
stm32-example/GPIO_IOToggle/: CMakeLists.txt
stm32-example/SPI_FullDuplex_ComPolling/: CMakeLists.txt
stm32-example/TIM_PWMOutput/: CMakeLists.txt
